[tool.poetry]
name = "bdo-mobility-tracker"
version = "0.1.0"
description = "Mobility Tracker using Facebook data"
authors = ["World Bank Group"]
license = "EPL-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.4"
geopandas = "^0.10.2"
numpy = "^1.21.4"
altair = "^4.1.0"
vega-datasets = "^0.9.0"
hdx-python-api = "^5.4.2"
hdx-python-country = "^3.0.5"
hdx-python-utilities = "^3.0.6"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
